extern/Hexapod/win_32/XPS_Q8_drivers.h

DLL int __stdcall SocketsStatusGet (int SocketIndex, char * SocketsStatus);  /* Get sockets current status */
DLL int __stdcall TestTCP (int SocketIndex, char * InputString, char * ReturnString);  /* Test TCP/IP transfert */
DLL int __stdcall ISRCorrectorCompensateOverrunNumberGet (int SocketIndex, int * CorrectorOverrunCompensationNumber, int * CorrectorOverrunCompensationMissNumber);  /* Get ISR Corrector Compensate Overrun Number */
DLL int __stdcall ISRCorrectorCompensateOverrunNumberReset (int SocketIndex);  /* Reset ISR Corrector Compensate Overrun Number */
DLL int __stdcall OptionalModuleExecute (int SocketIndex, char * ModuleFileName);  /* Execute an optional module */
DLL int __stdcall OptionalModuleKill (int SocketIndex, char * TaskName);  /* Kill an optional module */