extern/Hexapod/win_32/XPS_Q8_drivers.bas

Declare Function SocketsStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal SocketsStatus As String) As Integer '  Get sockets current status
Declare Function TestTCP Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal InputString As String, ByVal ReturnString As String) As Integer '  Test TCP/IP transfert
Declare Function ISRCorrectorCompensateOverrunNumberGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, CorrectorOverrunCompensationNumber As Integer, CorrectorOverrunCompensationMissNumber As Integer) As Integer '  Get ISR Corrector Compensate Overrun Number
Declare Function ISRCorrectorCompensateOverrunNumberReset Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long) As Integer '  Reset ISR Corrector Compensate Overrun Number
Declare Function OptionalModuleExecute Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal ModuleFileName As String) As Integer '  Execute an optional module
Declare Function OptionalModuleKill Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal TaskName As String) As Integer '  Kill an optional module
